deployment/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pacman
  namespace: pacman-branched-delivery
  labels:
    app.kubernetes.io/instance: pacman-dev
    app.kubernetes.io/name: pacman
    app.openshift.io/runtime: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: pacman-dev
      app.kubernetes.io/name: pacman
      app.openshift.io/runtime: nodejs
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: pacman-dev
        app.kubernetes.io/name: pacman
        app.openshift.io/runtime: nodejs
    spec:
      containers:
        - name: pacman
          image: quay.io/marrober/pacman
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
